# slack-aws-cost-guardian

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  cdk.json  pyproject.toml  requirements-lambda.txt
cdk/: __init__.py  app.py
cdk/stacks/: __init__.py  callback_stack.py  collector_stack.py  events_stack.py  storage_stack.py
config/: config.example.yaml  config.yaml  guardian-context.example.md  guardian-context.md
docs/: BACKLOG.md  SETUP.md
scripts/: info.py
src/slack_aws_cost_guardian/: __init__.py
src/slack_aws_cost_guardian/analysis/: __init__.py  anomaly_detector.py  baseline.py  report_builder.py
src/slack_aws_cost_guardian/collectors/: __init__.py  aws_budgets.py  aws_cost_explorer.py  base.py
src/slack_aws_cost_guardian/config/: __init__.py  loader.py  schema.py
src/slack_aws_cost_guardian/handlers/: __init__.py  cost_collector.py  slack_callback.py  slack_events.py
src/slack_aws_cost_guardian/llm/: __init__.py  base.py  client.py
src/slack_aws_cost_guardian/llm/prompts/: __init__.py  analysis_prompts.py  system_prompt.py
src/slack_aws_cost_guardian/llm/providers/: __init__.py  anthropic.py  openai.py
src/slack_aws_cost_guardian/llm/tools/: __init__.py  cost_tools.py  registry.py  schemas.py
src/slack_aws_cost_guardian/notifications/: __init__.py
src/slack_aws_cost_guardian/notifications/slack/: __init__.py  bot.py  callback.py  formatter.py  webhook.py
src/slack_aws_cost_guardian/storage/: __init__.py  dynamodb.py  models.py
tests/: __init__.py  conftest.py
tests/unit/: test_anomaly.py  test_config.py
